--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p> This is the HomePage</p>
 <button onclick="sayHi)">Click Me</button>
 
-<img> src_
+<img src=images/c3e1e47113a4bea928309e341b245dac.gif
   
 </body>
 <html> 
