--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p> This is the HomePage</p>
     <button onclick="sayHi)">Click Me</button>
 
-    <img src="images/c3e1e47113a4bea928309e341b245dac.gif">
+    <img src="images/c3e1e47113a4bea928309e341b245dac.gif" alt="sukuna" width="491" height="218">
   
   </body>
 <html> 
