--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link href="css/style.css" rel="stylesheet">
+  <meta charset="UTF-8"> <!-- Sets the character encoding for the document -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures proper responsive behavior on mobile devices --> <title>HomePage</title> <!-- Sets the title of the webpage -->
+  <link href="css/style.css" rel="stylesheet"> <!-- Links the external CSS file -->
+  <script src="scripts/javascript.js"></script> <!-- Links the external JS file -->
+</head>
+ <body>
+<!-- Header Section with Logo -->
+    <header>
+        <h1>Website Header</h1> <!-- Main title of the website -->
+        <img src="images/logo.png" alt="Logo" class="logo"> <!-- Displays a logo image aligned to the right --> </header>
+<!-- Navigation Bar -->
+    <nav>
+        <a href="pages/members.html">Members</a> <!-- Navigation link to Membership page -->
+<a href="pages/courses.html">Courses</a> <!-- Navigation link to Course page -->
+      <a href="pages/educationgames.html">EducationGames</a> <!-- Navigation link to educationgames page -->
+      <a href="pages/events.html">Events</a> <!-- Navigation link to Event page -->
+    </nav>
+        <a href="index.html">Home</a> <!-- Navigation link to Home page -->
+        <a href="pages/aboutus.html">AboutUs</a> <!-- Navigation link to About page -->
+     </nav>
+   <!- Main Content Area with Two Sections -->
+    <main class=mainpage>
+        <h2>Welcome to Our Website</h2> <!-- Main heading for content section -->
+        <p>This is the main content area where information is displayed.</p> <!-- Short description of the page -->
 
-<script src="scripts/javascript.js"></script>
-<title>My First WebPage</title>
-  </head>
-  <body>
-  <h1>Home Page</h1>
-  <p> This is the HomePage</p>
-    <button onclick="sayHi)">Click Me</button>
-
-    <img src="images/c3e1e47113a4bea928309e341b245dac.gif" alt="sukuna" width="491" height="218">
-  
-  </body>
-<html> 
+        <div class="sections"> 
+          <section class="section">
+            <h3>Section 1</h3>
+            <p>Content for the first section. </p></section>
+          <section class="section">
+            <h3>Section 2</h3> 
+            <p>Content for the second section.</p> 
+          </section>
+        </div>
+    </main>
+   <footer>
+     <p>&copy; 2025 Simple Layout. All rights reserved.</p>  </footer>
+ </body> 
+</html>
