--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <body>
 <!-- Header Section with Logo -->
     <header>
-        <h1>Website Header</h1> <!-- Main title of the website -->
+        <h1>My portfolio</h1> <!-- Main title of the website -->
         <img src="images/logo.png" alt="Logo" class="logo"> <!-- Displays a logo image aligned to the right --> </header>
 <!-- Navigation Bar -->
     <nav>
