--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <!- Main Content Area with Two Sections -->
     <main class=mainpage>
         <h2>Welcome to Our Website</h2> <!-- Main heading for content section -->
-        <p>This is the main content area where information is displayed.</p> <!-- Short description of the page -->
+        <p>Front end scripter/programmer with intermediate experience</p> <!-- Short description of the page -->
 
         <div class="sections"> 
           <section class="section">
