--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <body>
 <!-- Header Section with Logo -->
     <header>
-        <h1>My portfolio</h1> <!-- Main title of the website -->
+        <h1>Charity</h1> <!-- Main title of the website -->
         <img src="images/logo.png" alt="Logo" class="logo"> <!-- Displays a logo image aligned to the right --> </header>
 <!-- Navigation Bar -->
     <nav>
@@ -24,7 +24,7 @@
    <!- Main Content Area with Two Sections -->
     <main class=mainpage>
         <h2>Welcome to Our Website</h2> <!-- Main heading for content section -->
-        <p>Front end scripter/programmer with intermediate experience</p> <!-- Short description of the page -->
+        <p>Our mission is to empower communities and create lasting change by providing educational resources, healthcare support, and environmental conservation initiatives.</p> <!-- Short description of the page -->
 
         <div class="sections"> 
           <section class="section">
