--- a/index.html
+++ b/index.html
@@ -1,63 +1,362 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Donation Page</title>
+  <meta name="description" content="CharityPlus - Make a difference through donations and support." />
+  <title>CharityPlus</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="css/style.css" rel="stylesheet">
+
+  <!-- CSS Stylesheet -->
   <link rel="stylesheet" href="css/style.css" />
+
+  <!-- Icons -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
-<body>
+  
+  
+<body id="top">
 
-  <!-- HERO SECTION -->
-  <section class="hero">
-    <div class="hero-content">
-      <h1 class="hero-title">
-        <strong>Support Our Cause</strong>
-        Make a difference today
-      </h1>
-      <p class="hero-text">Your donations help us bring positive change to communities.</p>
-      <div class="btn-group">
-        <a href="#donate" class="btn btn-primary blue">Donate Now</a>
-      </div>
-    </div>
-  </section>
+  <!-- 
+    - #HEADER
+  -->
 
-  <!-- DONATION SECTION -->
-  <section id="donate" class="donation-section" style="padding: 50px 20px; background-color: #fff;">
-    <h2 style="text-align: center; font-size: 2.4rem;">Choose a Donation Amount</h2>
-    <div class="donation-buttons">
-      <button class="donation-btn">$10</button>
-      <button class="donation-btn">$25</button>
-      <button class="donation-btn">$50</button>
-      <button class="donation-btn">$100</button>
-    </div>
-
-    <div id="customAmountContainer">
-      <input type="number" id="customAmount" placeholder="Custom amount..." />
-      <button class="donation-btn">Donate</button>
-    </div>
-  </section>
-
-  <!-- SIGN-UP SECTION -->
-  <section class="sign-up">
+  <header class="header" data-header>
     <div class="container">
-      <h2 class="section-title">Stay Updated</h2>
-      <form>
-        <div class="input-group">
-          <label for="name">Full Name</label>
-          <input type="text" id="name" name="name" required />
-        </div>
-        <div class="input-group">
-          <label for="email">Email Address</label>
-          <input type="email" id="email" name="email" required />
-        </div>
-        <div class="form-action">
-          <button type="submit" class="btn">Subscribe</button>
-        </div>
-      </form>
+
+      <a href="#home">
+        <h1 class="logo">CharityPlus</h1>
+      </a>
+
+      <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
+        <ion-icon name="menu-outline" class="menu-icon"></ion-icon>
+        <ion-icon name="close-outline" class="close-icon"></ion-icon>
+      </button>
+
+      <nav class="navbar container">
+        <ul class="navbar-list">
+          <li>
+            <a href="#home" class="navbar-link" data-nav-link>Home</a>
+          </li>
+          <li>
+            <a href="#about" class="navbar-link" data-nav-link>About</a>
+          </li>
+          <li>
+            <a href="#portfolio" class="navbar-link" data-nav-link>Portfolio</a>
+          </li>
+          <li>
+            <a href="#skills" class="navbar-link" data-nav-link>Skills</a>
+          </li>
+          <li>
+            <a href="#contact" class="navbar-link" data-nav-link>Contact</a>
+          </li>
+        </ul>
+      </nav>
+
     </div>
-  </section>
+  </header>
+
+  <main>
+    <article>
+
+      <!-- 
+        - #HERO
+      -->
+
+      <section class="hero" id="home">
+        <div class="container">
+          <div class="hero-banner">
+            <!-- img -->
+            <img class="" src="" alt="">
+
+            <div class="elem elem-1">
+              <p class="elem-title">12</p>
+              <p class="elem-text">Years of Success</p>
+            </div>
+
+            <div class="elem elem-2">
+              <p class="elem-title">800+</p>
+              <p class="elem-text">Donations Completed</p>
+            </div>
+
+            <div class="elem elem-3">
+              <ion-icon name="trophy"></ion-icon>
+            </div>
+          </div>
+
+          <div class="hero-content">
+            <h2 class="hero-title">
+              <span>Donate to</span>
+              <strong>CharityPlus</strong> Help support us
+            </h2>
+
+            <p class="hero-text">
+              Together, we can make a difference and help those in need. Your donation can provide food, shelter, and support for individuals in dire circumstances.
+            </p>
+
+            <div class="btn-group">
+              <a href="#contact" class="btn btn-primary black">Fund us</a>
+              <a href="#about" class="btn">Learn more</a>
+            </div>
+
+            <!-- Donation Buttons -->
+            <div class="donation-buttons">
+              <button class="donation-btn" onclick="handleAmount(5)">$5</button>
+              <button class="donation-btn" onclick="handleAmount(10)">$10</button>
+              <button class="donation-btn" onclick="handleAmount(20)">$20</button>
+              <button class="donation-btn" onclick="showCustomAmount()">Custom</button>
+            </div>
+
+            <!-- Custom Donation Input -->
+            <div id="customAmountContainer" style="display:none; margin-top: 20px;">
+              <input type="number" id="customAmount" placeholder="Enter custom amount" />
+              <button onclick="handleAmountInput()">Submit</button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- 
+        - #ABOUT
+      -->
+
+      <section class="section about" id="about">
+        <div class="container">
+          <div class="about-content">
+            <p class="section-subtitle">We Are a Charity</p>
+            <h2 class="h2 section-title">Our Mission is to Help Those in Need</h2>
+            <p class="section-text">
+              At CharityPlus, our mission is simple: to provide assistance and support to those who need it the most. Through your generous donations, we have been able to change lives, offer support, and make a meaningful impact in the communities we serve.
+              <br><br>
+              We focus on providing food, shelter, and healthcare to the underprivileged, while also supporting educational programs that empower individuals and create lasting change.
+              <br><br>
+              With every donation, you're not just giving money; you're investing in the future of a better, more equitable world for all. Together, we can make a real difference.
+            </p>
+            <a href="#portfolio" class="btn btn-primary blue">Our Projects</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- 
+        - #PORTFOLIO
+      -->
+
+      <section class="section portfolio" id="portfolio">
+        <div class="container">
+          <p class="section-subtitle">Projects</p>
+          <h2 class="h2 section-title">Our Amazing Works</h2>
+          <p class="section-text">
+            Explore the impactful projects we’ve completed with the help of your generous contributions.
+          </p>
+
+          <ul class="portfolio-list">
+            <li>
+              <a href="https://github.com/Balamuruganpm/frontend-project1" class="portfolio-card" style="background-image: url('https://github.com/Balamuruganpm/frontend-project1/blob/main/balaproject1screenshot.png')">
+                <div class="card-content">
+                  <p class="card-subtitle">Github</p>
+                  <h3 class="h3 card-title">Login Page</h3>
+                  <span class="btn-link">
+                    <span>View Project</span>
+                    <ion-icon name="arrow-forward"></ion-icon>
+                  </span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/Balamuruganpm/frontend-project1" class="portfolio-card" style="background-image: url('./assets/images/portfolio-2.jpg')">
+                <div class="card-content">
+                  <p class="card-subtitle">Registration Page</p>
+                  <h3 class="h3 card-title">Travel Website registration page</h3>
+                  <span class="btn-link">
+                    <span>View Project</span>
+                    <ion-icon name="arrow-forward"></ion-icon>
+                  </span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/Balamuruganpm/frontend-project1" class="portfolio-card" style="background-image: url('./assets/images/portfolio-3.jpg')">
+                <div class="card-content">
+                  <p class="card-subtitle">Landing Page</p>
+                  <h3 class="h3 card-title">Website for Travel landing page</h3>
+                  <span class="btn-link">
+                    <span>View Project</span>
+                    <ion-icon name="arrow-forward"></ion-icon>
+                  </span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- 
+        - #SKILLS
+      -->
+
+      <section class="section skills" id="skills">
+        <div class="container">
+          <p class="section-subtitle">Our Skills</p>
+          <h2 class="h2 section-title">We Work Hard to Make a Difference</h2>
+          <p class="section-text">
+            Our team is dedicated to providing the best services for those in need, utilizing every tool available to create lasting change.
+          </p>
+
+          <ul class="skills-list">
+            <li class="skills-item">
+              <div class="wrapper" style="width: 95%">
+                <h3 class="skills-title">Fundraising</h3>
+                <data class="skills-data" value="95">95%</data>
+              </div>
+              <div class="skills-progress-box">
+                <div class="skills-progress" style="width: 95%"></div>
+              </div>
+            </li>
+            <li class="skills-item">
+              <div class="wrapper" style="width: 80%">
+                <h3 class="skills-title">Community Outreach</h3>
+                <data class="skills-data" value="80">80%</data>
+              </div>
+              <div class="skills-progress-box">
+                <div class="skills-progress" style="width: 80%"></div>
+              </div>
+            </li>
+            <li class="skills-item">
+              <div class="wrapper" style="width: 90%">
+                <h3 class="skills-title">Impact Assessment</h3>
+                <data class="skills-data" value="90">90%</data>
+              </div>
+              <div class="skills-progress-box">
+                <div class="skills-progress" style="width: 90%"></div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- 
+        - #CONTACT
+      -->
+
+      <section class="section contact" id="contact">
+        <div class="container">
+          <div class="contact-card">
+            <p class="card-subtitle"></p>
+            <h2 class="h2 section-title">Drop Us a Line</h2>
+
+            <div class="wrapper">
+              <ul class="contact-list">
+                <li class="contact-item">
+                  <div class="contact-icon">
+                    <ion-icon name="location"></ion-icon>
+                  </div>
+                  <div>
+                    <h3 class="contact-item-title">Address</h3>
+                    <address class="contact-item-link">
+                      UK
+                    </address>
+                  </div>
+                </li>
+
+                <li class="contact-item">
+                  <div class="contact-icon">
+                    <ion-icon name="mail"></ion-icon>
+                  </div>
+                  <div>
+                    <h3 class="contact-item-title">Email</h3>
+                    <a href="mailto:someone@gmail.com" class="contact-item-link">
+                      someone@gmail.com
+                    </a>
+                  </div>
+                </li>
+
+                <li class="contact-item">
+                  <div class="contact-icon">
+                    <ion-icon name="call"></ion-icon>
+                  </div>
+                  <div>
+                    <h3 class="contact-item-title">Phone</h3>
+                    <a href="tel:+441234567890" class="contact-item-link">
+                      +44 123 456 7890
+                    </a>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </article>
+  </main>
+
+  <!-- 
+    - #BACK TO TOP
+  -->
+
+  <a href="#top" class="back-to-top" data-back-to-top>BACK TOP</a>
+
+  <!-- ionicon link -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+  <!-- Custom Scripts -->
+  <script>
+    function handleAmount(amount) {
+        alert(`You chose $${amount}`);
+    }
+
+    function showCustomAmount() {
+        document.getElementById("customAmountContainer").style.display = "block";
+    }
+
+    function handleAmountInput() {
+        const customAmount = document.getElementById("customAmount").value;
+        if (customAmount) {
+            alert(`You chose $${customAmount}`);
+        } else {
+            alert("Please enter a valid amount.");
+        }
+    }
+  </script>
 
 </body>
-</html>
+<!-- Sign-Up Section -->
+<section class="section sign-up" id="sign-up">
+    <div class="container">
+        <div class="sign-up-card">
+            <p class="section-subtitle">Join Us</p>
+            <h2 class="h2 section-title">Sign Up to Make a Difference</h2>
+
+            <form id="signUpForm" action="submit_form_url" method="POST">
+                <!-- Name -->
+                <div class="input-group">
+                    <label for="fullName">Full Name</label>
+                    <input type="text" id="fullName" name="fullName" required placeholder="Enter your full name" />
+                </div>
+
+                <!-- Email -->
+                <div class="input-group">
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" name="email" required placeholder="Enter your email" />
+                </div>
+
+                <!-- Password -->
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required placeholder="Enter your password" />
+                </div>
+
+                <!-- Submit Button -->
+                <div class="form-action">
+                    <button type="submit" class="btn btn-primary">Sign Up</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</section>
