--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
   <a href="#top" class="back-to-top" data-back-to-top>BACK TOP</a>
 
   <!-- ionicon link -->
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script type="module" src="scripts/javascript.js"></script>
+  <script nomodule src="scripts/javascript.js"></script>
 
   <!-- Custom Scripts -->
   <script>
